--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,51 @@
-== README
+Planning our application
+Answer Questions
+What are we building?
+Who are we building it for?
+What features do we need to have?
+User Stories
+Model our Data
+Think through the pages we need in our app
+Questions
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+What are we building? We are building a personal site. A place where we can blog, share examples of our work, and have people contact us.
+Who are we building it for? We are building it for ourselves, but also the community. Sharing what we are learning by blogging is a great way to learn for ourselves, but we teach others in the process. Show potential employers that we know what we are doing.
+What features do we want to have?
+Posts
+Create / Edit / Destroy
+Markdown
+Syntax highlighting
+Comments (Disqus)
+Projects
+Create / Edit / Destroy
+Contact
+Contact form
+Sendgrid
+User (Devise)
+User Stories
 
-Things you may want to cover:
+As a blank, I want to be able to blank, so that blank.
 
-* Ruby version
+As a user, I want to be able to create posts so that I can share what I am learning on my blog.
+As a user, I want to be able to edit & destroy posts, so that I can manage my blog.
+As a user, I want to be able to write posts in markdown format so that it’s easy for me to writes posts.
+As a user, I want to be able to highlight the various syntax of code blocks that I share on my blog.
+As a user, I want to show the visitors and potential employers examples of my work, or stuff I’ve built.
+As a user, I want to be able to have visitors contact me through a form on my site.
+As a user, I want visitors to be able to leave comments on my posts.
+Modeling our Data
 
-* System dependencies
+Post title:string content:string
 
-* Configuration
+Project title:string description:text link:string
 
-* Database creation
+User
 
-* Database initialization
+Think through the pages we need in our app
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Home
+Posts#indexD
+Posts#Show
+Projects#index
+Projects#show
+Contact
